# GopherMedia

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  GopherMedia.kdev4  LICENSE  README.md  a.out  bitbucket-pipelines.yml  build.ninja  cmake_install.cmake  gopher_media.cpp  gopher_media.h  makefile  rules.ninja  test.cpp
.kdev4/: GopherMedia.kdev4
classes/: base_game.cpp  game_2d.cpp  game_3d.cpp
shaders/: test_shader.frag  test_shader.vert
src/: base_game.cpp  base_game.h  basic.cpp  basic.h  game_2d.cpp  game_2d.h  game_3d.cpp  game_3d.h  gopher_media.cpp  gopher_media.h
tests/: test_2d.cpp  test_3d.cpp
